    - updated dirent.h to 1.23.2
    - updated copyright year
    - removed Visual Studio files as they can be generated via CMake
    - use conan for external dependencies on Windows
    - removed external libraries from distribution
    - add CMake option "USE_CONAN" to specify if conan should be used for external dependencies (defaults to ON on Windows and OFF on all other platforms)
    - properly include external includes
    - use static libraries on Windows
    - adjusted library dependencies
    - updated libxml2 to 2.9.9 (conan only)
    - added some more "xpath_expr" examples to mame_regtest.xml
    - support -listxml format of combined MAME/MESS
    - added "hack_driver_root" to use old MAME/MESS specific -listxml node names
    - disabled "test_frontend" and executable existence check when "no_execution" is set to "1"
    - fixed compilation of non-debug build with NO_ASSERT
    - avoided some strlen() usage
    - replaced some ext() calls with return
    - added CMake option "USE_SANITIZERS" to enable AddressSanitizer/UndefinedBehaviorSanitizer if supported
    - removed "LOG_ALLOC" in favor of sanitizers
    - removed makefile - use CMake instead

    create_report
    - fixed some clang-tidy warnings
    - fixed Cppcheck warnings
    - fixed some CLion inspection warnings
    - improved error reporting of report type 4 (speed)
    - fixed incorrect "executed" count in the summary when "use_autosave" is set to "1"
    - added "executed with autosave" counter to summary
    - fixed/improved output when "wiki_format" is set to "2"
    - removed support for DocuWiki format ("wiki_format" set to "1")
    - renamed "wiki_format" to "use_markdown"
    - changed extension of "report_10" output to ".md"
    - changed "comparison" report to Markdown format
    - removed "report_type" 3 (tagmap report)
    - removed "tagmap_threshold"

    create_image_xml
    - fixed some CLion inspection warnings