@@ -2,9 +2,6 @@
 #include <stdlib.h>
 
 /* libxml2 */
-#ifdef __MINGW32__
-#define IN_LIBXML
-#endif
 #include <libxml/parser.h>
 
 #include "common.h"
