@@ -18,9 +18,6 @@
 #endif
 
 /* libxml2 */
-#ifdef __MINGW32__
-#define IN_LIBXML
-#endif
 #include <libxml/parser.h>
 #include <libxml/xpath.h>
 
