@@ -715,6 +715,7 @@
     - added CMake option "USE_SANITIZERS" to enable AddressSanitizer/UndefinedBehaviorSanitizer if supported
     - removed "LOG_ALLOC" in favor of sanitizers
     - removed makefile - use CMake instead
+    - moved IN_LIBXML definition for MinGW from source to CMakeList.txt
 
     create_report
     - fixed some clang-tidy warnings
